--- a/assets/styles/router/router.scss
+++ b/assets/styles/router/router.scss
@@ -11,8 +11,7 @@
   border-bottom: 1px solid #cccccc;
   position: sticky;
   top: 0;
-  width: 100vw;
-  z-index: 9999;
+  z-index: $router_z_index;
 
   a {
     text-decoration: none;
