--- a/first-mockup/styles/styles.css
+++ b/first-mockup/styles/styles.css
@@ -16,8 +16,7 @@
   border-bottom: 1px solid #cccccc;
   position: sticky;
   top: 0;
-  width: 100vw;
-  z-index: 9999;
+  z-index: 3;
 }
 .pages-router a:hover {
   color: #c7cccf;
@@ -381,10 +380,11 @@
   max-width: 980px;
   margin: 0 auto;
 }
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 400px) {
   .section-footer-content {
     flex-direction: column;
     align-items: center;
+    padding: 40px 8px 45px;
   }
 }
 .section-footer-content-nav a:hover {
