--- a/second-mockup/styles/styles.css
+++ b/second-mockup/styles/styles.css
@@ -16,8 +16,7 @@
   border-bottom: 1px solid #cccccc;
   position: sticky;
   top: 0;
-  width: 100vw;
-  z-index: 9999;
+  z-index: 3;
 }
 .pages-router a:hover {
   color: #c7cccf;
@@ -123,12 +122,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 67px auto 70px;
   max-width: 1064px;
+  margin: 67px auto 70px;
 }
 @media screen and (max-width: 1075px) {
   .section-header {
     margin: 68px 10px 71px;
+    width: 100%;
   }
 }
 @media screen and (max-width: 650px) {
@@ -138,10 +138,10 @@
 }
 .section-header-logo {
   font-family: "Inconsolata", monospace;
-  cursor: pointer;
   font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
+  cursor: pointer;
   letter-spacing: 0.2em;
   color: #000000;
 }
@@ -200,7 +200,7 @@
 }
 @media screen and (max-width: 900px) {
   .section-content-wrapper {
-    margin: 0 5px;
+    margin: 0 15px;
   }
 }
 .section-content-wrapper-subtitle {
@@ -286,13 +286,14 @@
 }
 @media screen and (max-width: 650px) {
   .section-yourLike-wrapper-photos {
+    padding-left: 50px;
     flex-direction: column;
     align-items: center;
   }
 }
 @media screen and (max-width: 800px) {
   .section-yourLike-wrapper-photos .photo-block {
-    padding: 10px;
+    padding-right: 43px;
   }
 }
 .section-yourLike-wrapper-photos .photo-block img {
@@ -317,7 +318,7 @@
 }
 @media screen and (max-width: 900px) {
   .section-comments-wrapper {
-    margin: 0 5px;
+    margin: 0 15px;
   }
 }
 .section-comments-wrapper-subtitle {
@@ -428,40 +429,41 @@
   background-color: #f0f0f0;
 }
 .section-footer-content {
-  padding: 40px 0 45px 0;
-  max-width: 980px;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 40px 0 45px 0;
+  max-width: 980px;
+  margin: 0 auto;
 }
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 400px) {
   .section-footer-content {
     flex-direction: column;
     align-items: center;
+    padding: 40px 8px 45px;
   }
 }
 .section-footer-content-nav a:hover {
   color: #c7cccf;
 }
 .section-footer-content-nav a {
-  margin-left: 17px;
+  margin-right: 17px;
 }
 .section-footer-content-contacts {
   display: flex;
+  font-size: initial;
   align-items: flex-start;
   color: black;
-  font-size: initial;
 }
 .section-footer-content-contacts .subtitle {
+  text-decoration: none;
   font-size: initial;
   color: black;
-  text-decoration: none;
 }
 .section-footer-content a {
+  text-decoration: none;
   font-size: initial;
   color: black;
-  text-decoration: none;
 }
 
 .social-icons {
