--- a/second-mockup/styles/styles.scss
+++ b/second-mockup/styles/styles.scss
@@ -7,11 +7,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 67px auto 70px;
   max-width: 1064px;
+  margin: 67px auto 70px;
 
   @media screen and (max-width: 1075px) {
     margin: 68px 10px 71px;
+    width: 100%;
   }
 
   @media screen and (max-width: 650px) {
@@ -19,13 +20,13 @@
   }
 
   &-logo {
-    font-family: 'Inconsolata', monospace;
-    cursor: pointer;
+    font-family: $inconolata_font;
     font-size: 30px;
     font-weight: bold;
     text-transform: uppercase;
+    cursor: pointer;
     letter-spacing: 0.2em;
-    color: #000000;
+    color: $nav_color;
 
     @media screen and (max-width: 1075px) {
       width: 50%;
@@ -80,7 +81,7 @@
       max-width: 890px;
       margin: 0 auto;
       @media screen and (max-width: 900px) {
-        margin: 0 5px;
+        margin: 0 15px;
       }
       &-subtitle {
         font-family: 'Ubuntu', sans-serif;
@@ -141,15 +142,19 @@
 .section-yourLike {
   background-color: #f0f0f0;
   padding: 60px 0;
+
   @media screen and (max-width: 650px) {
     padding: 27px;
   }
+
   &-wrapper {
     max-width: 890px;
     margin: 0 auto;
+
     @media screen and (max-width: 900px) {
       margin: 0 5px;
     }
+
     &-subtitle {
       font-family: 'Ubuntu', sans-serif;
       font-size: 14px;
@@ -158,31 +163,37 @@
       color: #b4ad9e;
       margin: 27px 0 32px 0;
     }
+
     &-photos {
       display: flex;
       justify-content: space-between;
 
       @media screen and (max-width: 650px) {
+        padding-left: 50px;
         flex-direction: column;
         align-items: center;
       }
+
       .photo-block {
 
         @media screen and (max-width: 800px) {
-          padding: 10px;
+          padding-right: 43px;
         }
 
         img {
           width: 100%;
         }
+
         &-title {
           font-size: 20px;
           margin: 10px 0;
+
           @media screen and (max-width: 800px) {
             font-size: 16px;
           }
         }
       }
+
       .block {
         padding-right: 45px;
       }
@@ -196,7 +207,7 @@
     max-width: 890px;
     margin: 0 auto;
     @media screen and (max-width: 900px) {
-      margin: 0 5px;
+      margin: 0 15px;
     }
     &-subtitle {
       font-family: 'Ubuntu', sans-serif;
@@ -259,7 +270,7 @@
         justify-content: center;
         background: #417db7;
 
-        .avatar{
+        .avatar {
           font-family: 'Ubuntu', sans-serif;
           color: white;
           font-size: 37px;
@@ -313,41 +324,44 @@
   background-color: #f0f0f0;
 
   &-content {
-    padding: 40px 0 45px 0;
-    max-width: 980px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 40px 0 45px 0;
+    max-width: 980px;
+    margin: 0 auto;
 
-    @media screen and (max-width: 380px) {
+    @media screen and (max-width: 400px) {
       flex-direction: column;
       align-items: center;
+      padding: 40px 8px 45px;
     }
 
     &-nav {
       @include hover;
-      a{
-        margin-left: 17px;
+
+      a {
+        margin-right: 17px;
       }
     }
 
-    &-contacts{
+    &-contacts {
       display: flex;
+      font-size: initial;
       align-items: flex-start;
       color: black;
-      font-size: initial;
+
       .subtitle {
+        text-decoration: none;
         font-size: initial;
         color: black;
-        text-decoration: none;
       }
     }
 
     a {
+      text-decoration: none;
       font-size: initial;
       color: black;
-      text-decoration: none;
     }
   }
 }
