--- a/third-mockup/styles/styles.scss
+++ b/third-mockup/styles/styles.scss
@@ -7,11 +7,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 67px auto 70px;
   max-width: 1064px;
+  margin: 67px auto 70px;
 
   @media screen and (max-width: 1075px) {
     margin: 68px 10px 71px;
+    width: 100%;
   }
 
   @media screen and (max-width: 650px) {
@@ -19,13 +20,13 @@
   }
 
   &-logo {
-    font-family: 'Inconsolata', monospace;
-    cursor: pointer;
+    font-family: $inconolata_font;
     font-size: 30px;
     font-weight: bold;
     text-transform: uppercase;
+    cursor: pointer;
     letter-spacing: 0.2em;
-    color: #000000;
+    color: $nav_color;
 
     @media screen and (max-width: 1075px) {
       width: 50%;
@@ -86,12 +87,18 @@
     display: flex;
     justify-content: space-between;
 
-    @media screen and (max-width: 900px) {
-      margin: 0 5px;
+    @media screen and (max-width: 950px) {
+      margin: 0 15px;
+      display: block;
     }
 
     &-content {
       display: grid;
+
+      @media screen and (max-width: 950px) {
+        margin: 0 15px;
+
+      }
 
       .content-subtitle {
         font-family: "Ubuntu", sans-serif;
@@ -217,9 +224,11 @@
   &-wrapper {
     max-width: 890px;
     margin: 0 auto;
+
     @media screen and (max-width: 900px) {
       margin: 0 5px;
     }
+
     &-subtitle {
       font-family: 'Ubuntu', sans-serif;
       font-size: 14px;
@@ -228,13 +237,17 @@
       color: #b4ad9e;
       margin: 27px 0 32px 0;
     }
+
     &-commentList {
       .comment {
         display: flex;
         align-content: space-between;
+
         &-avatar {
           position: relative;
           padding: 5px 25px 0 0;
+          width: 70px;
+
           &-image {
             width: 70px;
             height: 70px;
@@ -253,11 +266,14 @@
             }
           }
         }
+
         &-description {
           line-height: 1.8;
+
           .user {
             font-weight: bold;
           }
+
           .reply {
             font-family: 'Ubuntu', sans-serif;
             font-size: 14px;
@@ -270,8 +286,10 @@
         }
       }
     }
+
     &-input {
       display: flex;
+
       .input-avatar {
         height: 70px;
         width: 81px;
@@ -281,10 +299,16 @@
         justify-content: center;
         background: #417db7;
 
-        .avatar{
+        .avatar {
+          width: 70px;
           font-family: 'Ubuntu', sans-serif;
           color: white;
           font-size: 37px;
+          text-align: center;
+
+          @media screen and (max-width: 900px) {
+            width: 70px;
+          }
         }
       }
       input {
@@ -335,41 +359,44 @@
   background-color: #f0f0f0;
 
   &-content {
-    padding: 40px 0 45px 0;
-    max-width: 980px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 40px 0 45px 0;
+    max-width: 980px;
+    margin: 0 auto;
 
-    @media screen and (max-width: 380px) {
+    @media screen and (max-width: 400px) {
       flex-direction: column;
       align-items: center;
+      padding: 40px 8px 45px;
     }
 
     &-nav {
       @include hover;
-      a{
-        margin-left: 17px;
+
+      a {
+        margin-right: 17px;
       }
     }
 
-    &-contacts{
+    &-contacts {
       display: flex;
+      font-size: initial;
       align-items: flex-start;
       color: black;
-      font-size: initial;
+
       .subtitle {
+        text-decoration: none;
         font-size: initial;
         color: black;
-        text-decoration: none;
       }
     }
 
     a {
+      text-decoration: none;
       font-size: initial;
       color: black;
-      text-decoration: none;
     }
   }
 }
@@ -397,35 +424,64 @@
   width: 250px;
   margin: 30px 0 50px 50px;
 
-  @media screen and (max-width: 650px) {
-    margin-top: 30px 3px 50px 3px;
+  @media screen and (max-width: 690px) {
+    margin: 30px 3px 50px 3px;
   }
 
   p {
+    line-height: 24px;
     margin: 0;
   }
+
   img {
     width: 100%;
   }
+
   .content-side-block-title {
     font-size: 27px;
     margin: 15px 0;
   }
+
   .content-side-block-social {
+    padding: 20px 0 60px;
     a {
-      color: rgb(193 190 172);
+      i {
+        padding: 0;
+        padding-right: 10px;
+        color: #b4ad9e;
+      }
     }
   }
+
+  .topPost-title {
+    text-transform: uppercase;
+    font-family: "Ubuntu", sans-serif;
+    color: #b4ad9e;
+    padding-bottom: 30px;
+  }
+
   .topPost-list {
     padding-left: 17px;
   }
+
   li {
     margin-bottom: 10px;
+    color: black;
+    font-size: 16px;
+    &::marker {
+      color: #b4ad9e;
+      font-size: 13px;
+    }
   }
+
   .topPosts-comments {
     font-size: 11px;
     padding-top: 5px;
+    text-transform: uppercase;
+    font-family: "Ubuntu", sans-serif;
+    color: #b4ad9e;
   }
+
   .banner {
     width: 250px;
     height: 250px;
@@ -436,5 +492,8 @@
     line-height: 5.5;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
+  }
+  &-topPosts {
+    padding-bottom: 30px;
   }
 }
