--- a/assets/styles/burger/burger.scss
+++ b/assets/styles/burger/burger.scss
@@ -23,6 +23,7 @@
 .menu-btn span:nth-of-type(2) {
   top: calc(50% - 5px);
 }
+
 .menu-btn span:nth-of-type(3) {
   top: calc(50% + 5px);
 }
@@ -31,10 +32,12 @@
 .menu-btn.active span:nth-of-type(1) {
   display: none;
 }
+
 .menu-btn.active span:nth-of-type(2) {
   top: 50%;
   transform: translate(-50%, 0%) rotate(45deg);
 }
+
 .menu-btn.active span:nth-of-type(3) {
   top: 50%;
   transform: translate(-50%, 0%) rotate(-45deg);
@@ -43,9 +46,11 @@
 // Menu
 .burger {
   display: none;
+  z-index: 2;
 
   @media screen and (max-width: 650px) {
     display: block;
+    z-index: 2;
   }
 }
 
