--- a/first-mockup/styles/styles.scss
+++ b/first-mockup/styles/styles.scss
@@ -292,6 +292,10 @@
     max-width: 980px;
     margin: 0 auto;
 
+    @media screen and (max-width: 1000px) {
+      padding: 40px 20px 45px;
+    }
+
     @media screen and (max-width: 400px) {
       flex-direction: column;
       align-items: center;
