--- a/third-mockup/styles/styles.scss
+++ b/third-mockup/styles/styles.scss
@@ -12,7 +12,6 @@
 
   @media screen and (max-width: 1075px) {
     margin: 68px 10px 71px;
-    width: 100%;
   }
 
   @media screen and (max-width: 650px) {
@@ -89,6 +88,7 @@
 
     @media screen and (max-width: 950px) {
       margin: 0 15px;
+      padding: 0;
       display: block;
     }
 
@@ -96,8 +96,9 @@
       display: grid;
 
       @media screen and (max-width: 950px) {
+        display: flex;
+        flex-direction: column;
         margin: 0 15px;
-
       }
 
       .content-subtitle {
@@ -130,7 +131,13 @@
         justify-content: space-between;
         flex-direction: row-reverse;
 
-        .content-social-nav {
+        &-nav {
+          @media screen and (max-width: 950px) {
+            display: flex;
+            padding: 0;
+            align-items: baseline;
+          }
+
           padding-left: 520px;
           padding-bottom: 10px;
           text-transform: uppercase;
@@ -149,15 +156,19 @@
         }
       }
     }
+
     img {
       width: 100%;
       margin: 20px 0;
     }
+
     .content-description {
       line-height: 24px;
+
       p {
         margin-top: 35px;
       }
+
       .description-i {
         text-align: center;
         padding: 27px;
@@ -170,15 +181,19 @@
 .section-yourLike {
   background-color: #f0f0f0;
   padding: 60px 0;
+
   @media screen and (max-width: 650px) {
     padding: 27px;
   }
+
   &-wrapper {
     max-width: 890px;
     margin: 0 auto;
+
     @media screen and (max-width: 900px) {
       margin: 0 5px;
     }
+
     &-subtitle {
       font-family: 'Ubuntu', sans-serif;
       font-size: 14px;
@@ -187,6 +202,7 @@
       color: #b4ad9e;
       margin: 27px 0 32px 0;
     }
+
     &-photos {
       display: flex;
       justify-content: space-between;
@@ -204,15 +220,22 @@
         img {
           width: 100%;
         }
+
         &-title {
           font-size: 20px;
           margin: 10px 0;
+
           @media screen and (max-width: 800px) {
             font-size: 16px;
           }
         }
       }
+
       .block {
+        @media screen and (max-width: 800px) {
+          padding: 10px;
+        }
+
         padding-right: 45px;
       }
     }
@@ -366,6 +389,10 @@
     max-width: 980px;
     margin: 0 auto;
 
+    @media screen and (max-width: 1000px) {
+      padding: 40px 20px 45px;
+    }
+
     @media screen and (max-width: 400px) {
       flex-direction: column;
       align-items: center;
@@ -425,7 +452,7 @@
   margin: 30px 0 50px 50px;
 
   @media screen and (max-width: 690px) {
-    margin: 30px 3px 50px 3px;
+    margin-bottom: 50px;
   }
 
   p {
