--- a/assets/styles/burger/burger.scss
+++ b/assets/styles/burger/burger.scss
@@ -46,11 +46,12 @@
 // Menu
 .burger {
   display: none;
-  z-index: 2;
 
   @media screen and (max-width: 650px) {
     display: block;
-    z-index: 2;
+    position: fixed;
+    right: 10px;
+    z-index: 3;
   }
 }
 
